# pkg/apis/apiserver/v1alpha1/kubecarrier.pb.go
@@ -24,11 +24,10 @@ import (
 	math "math"
 
 	proto "github.com/golang/protobuf/proto"
+	empty "github.com/golang/protobuf/ptypes/empty"
 	timestamp "github.com/golang/protobuf/ptypes/timestamp"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	grpc "google.golang.org/grpc"
-	codes "google.golang.org/grpc/codes"
-	status "google.golang.org/grpc/status"
 )
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -146,57 +145,109 @@ func (m *VersionRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_VersionRequest proto.InternalMessageInfo
 
+type UserInfo struct {
+	User                 string   `protobuf:"bytes,1,opt,name=User,proto3" json:"User,omitempty"`
+	Groups               []string `protobuf:"bytes,2,rep,name=Groups,proto3" json:"Groups,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *UserInfo) Reset()         { *m = UserInfo{} }
+func (m *UserInfo) String() string { return proto.CompactTextString(m) }
+func (*UserInfo) ProtoMessage()    {}
+func (*UserInfo) Descriptor() ([]byte, []int) {
+	return fileDescriptor_046afb50055b7632, []int{2}
+}
+
+func (m *UserInfo) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_UserInfo.Unmarshal(m, b)
+}
+func (m *UserInfo) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_UserInfo.Marshal(b, m, deterministic)
+}
+func (m *UserInfo) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_UserInfo.Merge(m, src)
+}
+func (m *UserInfo) XXX_Size() int {
+	return xxx_messageInfo_UserInfo.Size(m)
+}
+func (m *UserInfo) XXX_DiscardUnknown() {
+	xxx_messageInfo_UserInfo.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_UserInfo proto.InternalMessageInfo
+
+func (m *UserInfo) GetUser() string {
+	if m != nil {
+		return m.User
+	}
+	return ""
+}
+
+func (m *UserInfo) GetGroups() []string {
+	if m != nil {
+		return m.Groups
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*APIVersion)(nil), "kubecarrier.api.v1.APIVersion")
 	proto.RegisterType((*VersionRequest)(nil), "kubecarrier.api.v1.VersionRequest")
+	proto.RegisterType((*UserInfo)(nil), "kubecarrier.api.v1.UserInfo")
 }
 
-func init() {
-	proto.RegisterFile("kubecarrier.proto", fileDescriptor_046afb50055b7632)
-}
+func init() { proto.RegisterFile("kubecarrier.proto", fileDescriptor_046afb50055b7632) }
 
 var fileDescriptor_046afb50055b7632 = []byte{
-	// 282 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x90, 0x3f, 0x4e, 0xc3, 0x30,
-	0x14, 0xc6, 0x95, 0x02, 0x6d, 0xf3, 0x2a, 0xa1, 0xe2, 0x01, 0x59, 0x51, 0x05, 0x55, 0xa6, 0x4e,
-	0x8e, 0x52, 0x16, 0x56, 0x10, 0x0b, 0x62, 0x41, 0x11, 0x62, 0x60, 0x41, 0x2f, 0xc5, 0x4d, 0x2d,
-	0x12, 0xdb, 0x38, 0x4e, 0x0e, 0xc0, 0x15, 0xb8, 0x09, 0x57, 0xe1, 0x0a, 0x1c, 0x04, 0xc9, 0x71,
-	0x08, 0x08, 0x36, 0x7f, 0xef, 0xfb, 0xbd, 0x3f, 0xfe, 0xe0, 0xe8, 0xb9, 0xc9, 0xf9, 0x06, 0x8d,
-	0x11, 0xdc, 0x30, 0x6d, 0x94, 0x55, 0x84, 0xfc, 0x2c, 0xa1, 0x16, 0xac, 0x4d, 0xa3, 0xd3, 0x42,
-	0xa9, 0xa2, 0xe4, 0x89, 0x23, 0xf2, 0x66, 0x9b, 0x58, 0x51, 0xf1, 0xda, 0x62, 0xa5, 0xbb, 0xa6,
-	0x68, 0xe1, 0x01, 0xd4, 0x22, 0x41, 0x29, 0x95, 0x45, 0x2b, 0x94, 0xac, 0x3b, 0x37, 0x7e, 0x0f,
-	0x00, 0x2e, 0x6e, 0xaf, 0xef, 0xb9, 0xa9, 0x85, 0x92, 0x84, 0xc2, 0xa4, 0xed, 0x9e, 0x34, 0x58,
-	0x06, 0xab, 0x30, 0xeb, 0x25, 0x39, 0x86, 0x71, 0x6e, 0x50, 0x6e, 0x76, 0x74, 0xe4, 0x0c, 0xaf,
-	0xc8, 0x39, 0x84, 0x79, 0x23, 0xca, 0xa7, 0x2b, 0xb4, 0x9c, 0xee, 0x2d, 0x83, 0xd5, 0x6c, 0x1d,
-	0xb1, 0x6e, 0x25, 0xeb, 0x6f, 0x62, 0x77, 0xfd, 0x4d, 0xd9, 0x00, 0x93, 0x05, 0x84, 0x85, 0xf2,
-	0x8b, 0xe9, 0xbe, 0x1b, 0x3a, 0x14, 0x48, 0x04, 0x53, 0x5d, 0xa2, 0xdd, 0x2a, 0x53, 0xd1, 0x03,
-	0x67, 0x7e, 0xeb, 0x78, 0x0e, 0x87, 0x1e, 0xcb, 0xf8, 0x4b, 0xc3, 0x6b, 0xbb, 0x96, 0x30, 0xbb,
-	0x19, 0xb2, 0x21, 0x8f, 0x30, 0xe9, 0xe7, 0xc4, 0xec, 0x6f, 0x68, 0xec, 0x77, 0x77, 0x74, 0xf2,
-	0x1f, 0x33, 0xa4, 0x12, 0xcf, 0x5f, 0x3f, 0x3e, 0xdf, 0x46, 0x40, 0xa6, 0x89, 0x4f, 0xe3, 0x12,
-	0x1e, 0xa6, 0x6d, 0x8a, 0xa5, 0xde, 0x61, 0x9a, 0x8f, 0xdd, 0x37, 0xcf, 0xbe, 0x02, 0x00, 0x00,
-	0xff, 0xff, 0x63, 0x43, 0x27, 0x94, 0xb1, 0x01, 0x00, 0x00,
+	// 362 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x51, 0x4d, 0x4e, 0xe3, 0x30,
+	0x18, 0x55, 0xda, 0x4e, 0x9b, 0x7c, 0x95, 0x66, 0x3a, 0x5e, 0x54, 0x56, 0xa6, 0x1a, 0xaa, 0xac,
+	0xba, 0x72, 0xd4, 0x22, 0x21, 0xb6, 0x45, 0x20, 0x54, 0xb1, 0x00, 0x55, 0xfc, 0x48, 0x6c, 0x90,
+	0x53, 0xdc, 0xc6, 0x22, 0x89, 0x8d, 0xe3, 0x14, 0xb1, 0xe5, 0x0a, 0xdc, 0x84, 0x0b, 0x70, 0x08,
+	0xae, 0xc0, 0x41, 0x50, 0x9c, 0x84, 0x00, 0xed, 0xee, 0x7b, 0x7e, 0xcf, 0xef, 0x7b, 0x7e, 0x86,
+	0xbf, 0x77, 0x59, 0xc0, 0x16, 0x54, 0x29, 0xce, 0x14, 0x91, 0x4a, 0x68, 0x81, 0xd0, 0xd7, 0x23,
+	0x2a, 0x39, 0x59, 0x8f, 0xdd, 0x9d, 0x95, 0x10, 0xab, 0x88, 0xf9, 0x46, 0x11, 0x64, 0x4b, 0x5f,
+	0xf3, 0x98, 0xa5, 0x9a, 0xc6, 0xb2, 0xb8, 0xe4, 0xfe, 0xfb, 0x29, 0x60, 0xb1, 0xd4, 0x8f, 0x25,
+	0x39, 0x28, 0x49, 0x2a, 0xb9, 0x4f, 0x93, 0x44, 0x68, 0xaa, 0xb9, 0x48, 0xd2, 0x82, 0xf5, 0x5e,
+	0x2c, 0x80, 0xe9, 0xd9, 0xec, 0x92, 0xa9, 0x94, 0x8b, 0x04, 0x61, 0xe8, 0xac, 0x8b, 0x11, 0x5b,
+	0x43, 0x6b, 0xe4, 0xcc, 0x2b, 0x88, 0xfa, 0xd0, 0x0e, 0x14, 0x4d, 0x16, 0x21, 0x6e, 0x18, 0xa2,
+	0x44, 0x68, 0x1f, 0x9c, 0x20, 0xe3, 0xd1, 0xed, 0x21, 0xd5, 0x0c, 0x37, 0x87, 0xd6, 0xa8, 0x3b,
+	0x71, 0x49, 0xb1, 0x92, 0x54, 0x79, 0xc8, 0x79, 0x15, 0x78, 0x5e, 0x8b, 0xd1, 0x00, 0x9c, 0x95,
+	0x28, 0x17, 0xe3, 0x96, 0x31, 0xad, 0x0f, 0x90, 0x0b, 0xb6, 0x8c, 0xa8, 0x5e, 0x0a, 0x15, 0xe3,
+	0x5f, 0x86, 0xfc, 0xc4, 0x5e, 0x0f, 0x7e, 0x97, 0xb2, 0x39, 0xbb, 0xcf, 0x58, 0xaa, 0xbd, 0x3d,
+	0xb0, 0x2f, 0x52, 0xa6, 0x66, 0xc9, 0x52, 0x20, 0x04, 0xad, 0x7c, 0x2e, 0x1f, 0x60, 0xe6, 0x3c,
+	0xfd, 0xb1, 0x12, 0x99, 0x4c, 0x71, 0x63, 0xd8, 0xcc, 0xd3, 0x17, 0x68, 0xf2, 0x6a, 0x41, 0xf7,
+	0xa4, 0x6e, 0x1c, 0xdd, 0x40, 0xa7, 0x0a, 0xe0, 0x91, 0xcd, 0xaf, 0x20, 0xdf, 0xd7, 0xba, 0xff,
+	0xb7, 0x69, 0xea, 0x3a, 0xbd, 0xde, 0xd3, 0xdb, 0xfb, 0x73, 0x03, 0x90, 0xed, 0x57, 0x35, 0x9e,
+	0x42, 0xfb, 0x2a, 0x14, 0xd3, 0x78, 0x86, 0xfa, 0x1b, 0x2d, 0x1d, 0xe5, 0xbf, 0xe6, 0x0e, 0xb6,
+	0x79, 0x56, 0x8f, 0xf3, 0xfe, 0x18, 0x47, 0x07, 0x75, 0xfc, 0x87, 0x50, 0xd0, 0x98, 0x1f, 0xc0,
+	0xb5, 0xbd, 0x1e, 0xd3, 0x48, 0x86, 0x74, 0x1c, 0xb4, 0x8d, 0xd5, 0xee, 0x47, 0x00, 0x00, 0x00,
+	0xff, 0xff, 0x85, 0x61, 0xb5, 0x3b, 0x58, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
 var _ context.Context
-var _ grpc.ClientConnInterface
+var _ grpc.ClientConn
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-const _ = grpc.SupportPackageIsVersion6
+const _ = grpc.SupportPackageIsVersion4
 
 // KubecarrierClient is the client API for Kubecarrier service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type KubecarrierClient interface {
 	Version(ctx context.Context, in *VersionRequest, opts ...grpc.CallOption) (*APIVersion, error)
+	WhoAmI(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*UserInfo, error)
 }
 
 type kubecarrierClient struct {
-	cc grpc.ClientConnInterface
+	cc *grpc.ClientConn
 }
 
-func NewKubecarrierClient(cc grpc.ClientConnInterface) KubecarrierClient {
+func NewKubecarrierClient(cc *grpc.ClientConn) KubecarrierClient {
 	return &kubecarrierClient{cc}
 }
 
@@ -209,17 +260,19 @@ func (c *kubecarrierClient) Version(ctx context.Context, in *VersionRequest, opt
 	return out, nil
 }
 
+func (c *kubecarrierClient) WhoAmI(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*UserInfo, error) {
+	out := new(UserInfo)
+	err := c.cc.Invoke(ctx, "/kubecarrier.api.v1.Kubecarrier/WhoAmI", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // KubecarrierServer is the server API for Kubecarrier service.
 type KubecarrierServer interface {
 	Version(context.Context, *VersionRequest) (*APIVersion, error)
-}
-
-// UnimplementedKubecarrierServer can be embedded to have forward compatible implementations.
-type UnimplementedKubecarrierServer struct {
-}
-
-func (*UnimplementedKubecarrierServer) Version(ctx context.Context, req *VersionRequest) (*APIVersion, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method Version not implemented")
+	WhoAmI(context.Context, *empty.Empty) (*UserInfo, error)
 }
 
 func RegisterKubecarrierServer(s *grpc.Server, srv KubecarrierServer) {
@@ -244,6 +297,24 @@ func _Kubecarrier_Version_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Kubecarrier_WhoAmI_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(empty.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KubecarrierServer).WhoAmI(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/kubecarrier.api.v1.Kubecarrier/WhoAmI",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KubecarrierServer).WhoAmI(ctx, req.(*empty.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _Kubecarrier_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "kubecarrier.api.v1.Kubecarrier",
 	HandlerType: (*KubecarrierServer)(nil),
@@ -251,6 +322,10 @@ var _Kubecarrier_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Version",
 			Handler:    _Kubecarrier_Version_Handler,
+		},
+		{
+			MethodName: "WhoAmI",
+			Handler:    _Kubecarrier_WhoAmI_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
